--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,250 +1,249 @@
-
  body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
-  padding: 0px 20px 20px 20px;
-}
-/* 
-h1 {
-  text-align: center;
-  font-weight: 700;
-  font-size: 40px;
-  line-height: 55px;
-}
+   font-family: Arial, sans-serif;
+   background-color: #f2f2f2;
+   padding: 0px 20px 20px 20px;
+ }
+/*
+ h1 {
+   text-align: center;
+   font-weight: 700;
+   font-size: 40px;
+   line-height: 55px;
+ }
 
-h2 {
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 44px;
-  text-align: center;
-}
+ h2 {
+   font-weight: 700;
+   font-size: 32px;
+   line-height: 44px;
+   text-align: center;
+ }
 
-form {
-  max-width: 300px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
+ form {
+   max-width: 300px;
+   margin: 0 auto;
+   padding: 20px;
+   background-color: #fff;
+   border: 1px solid #ccc;
+   border-radius: 5px;
+ }
 
-label {
-  display: block;
-  margin-bottom: 10px;
-}
+ label {
+   display: block;
+   margin-bottom: 10px;
+ }
 
-input[type="email"],
-input[type="password"],
-input[type="text"],
-input[type="date"],
-input[type="tel"],
-input[type="number"] {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #2565DC;
-  border-radius: 3px;
-  box-sizing: border-box;
-}
+ input[type="email"],
+ input[type="password"],
+ input[type="text"],
+ input[type="date"],
+ input[type="tel"],
+ input[type="number"] {
+   width: 100%;
+   padding: 10px;
+   border: 1px solid #2565DC;
+   border-radius: 3px;
+   box-sizing: border-box;
+ }
 
-input[type="submit"] {
-  width: 100%;
-  padding: 10px;
-  background-color: #2565DC;
-  color: #fff;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-}
+ input[type="submit"] {
+   width: 100%;
+   padding: 10px;
+   background-color: #2565DC;
+   color: #fff;
+   border: none;
+   border-radius: 3px;
+   cursor: pointer;
+ }
 
-input[type="submit"]:hover {
-  background-color: #1251C7;
-}
+ input[type="submit"]:hover {
+   background-color: #1251C7;
+ }
 
-p {
-  text-align: center;
-}
+ p {
+   text-align: center;
+ }
 
-a {
-  color: #065fd4;
-  text-decoration: none;
-}
+ a {
+   color: #065fd4;
+   text-decoration: none;
+ }
 
-a:hover {
-  text-decoration: underline;
-}
-
-
-#menu__toggle {
-  opacity: 0;
-}
-
-#menu__toggle:checked+.menu__btn>span {
-  transform: rotate(45deg);
-}
-
-#menu__toggle:checked+.menu__btn>span::before {
-  top: 0;
-  transform: rotate(0deg);
-}
-
-#menu__toggle:checked+.menu__btn>span::after {
-  top: 0;
-  transform: rotate(90deg);
-}
-
-#menu__toggle:checked~.menu__box {
-  left: 0 !important;
-}
-
-.menu__btn {
-  position: fixed;
-  top: 50px;
-  left: 20px;
-  width: 26px;
-  height: 26px;
-  cursor: pointer;
-  z-index: 1;
-}
-
-.menu__btn>span,
-.menu__btn>span::before,
-.menu__btn>span::after {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: #2565DC;
-  transition-duration: .25s;
-}
-
-#menu_close,
-#menu_close::before,
-#menu_close::after {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: #fff;
-  transition-duration: .25s;
-}
-
-.menu__btn>span::before {
-  content: '';
-  top: -8px;
-}
-
-.menu__btn>span::after {
-  content: '';
-  top: 8px;
-}
+ a:hover {
+   text-decoration: underline;
+ }
 
 
-.menu__box {
-  display: block;
-  position: fixed;
-  top: 0;
-  left: -100%;
-  width: 300px;
-  height: 100%;
-  margin: 0;
-  padding: 80px 0;
-  list-style: none;
-  background-color: #fff;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
-  transition-duration: .25s;
-}
+ #menu__toggle {
+   opacity: 0;
+ }
 
-.menu__item {
-  display: block;
-  padding: 12px 24px;
-  color: #000;
-  font-size: 20px;
-  font-weight: 600;
-  text-decoration: none;
-  transition-duration: .25s;
-}
+ #menu__toggle:checked+.menu__btn>span {
+   transform: rotate(45deg);
+ }
 
-.menu__item:hover {
-  background-color: #ADC6F3;
-  text-decoration: none;
-}
+ #menu__toggle:checked+.menu__btn>span::before {
+   top: 0;
+   transform: rotate(0deg);
+ }
 
-#selected_menu_item {
-  color: #2565DC;
-}
+ #menu__toggle:checked+.menu__btn>span::after {
+   top: 0;
+   transform: rotate(90deg);
+ }
 
-.select_floor select {
-  padding: 8px;
-  border: 0px solid transparent;
-  border-radius: 4px;
-  background-color: transparent;
-  font-weight: 800;
-  font-size: 16px;
-}
+ #menu__toggle:checked~.menu__box {
+   left: 0 !important;
+ }
 
-.select_floor option {
-  font-weight: 800;
-  font-size: 16px;
-}
+ .menu__btn {
+   position: fixed;
+   top: 50px;
+   left: 20px;
+   width: 26px;
+   height: 26px;
+   cursor: pointer;
+   z-index: 1;
+ }
 
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 30px;
-  margin-top: 30px;
-}
+ .menu__btn>span,
+ .menu__btn>span::before,
+ .menu__btn>span::after {
+   display: block;
+   position: absolute;
+   width: 100%;
+   height: 2px;
+   background-color: #2565DC;
+   transition-duration: .25s;
+ }
 
-.room-item {
-  display: inline-flex;
-  padding: 20px 30px 30px 30px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 25px; 
-}
+ #menu_close,
+ #menu_close::before,
+ #menu_close::after {
+   display: block;
+   position: absolute;
+   width: 100%;
+   height: 2px;
+   background-color: #fff;
+   transition-duration: .25s;
+ }
 
-.room-item {
-  border-radius: 15px;
-  background: #FFF;
-  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
-}
+ .menu__btn>span::before {
+   content: '';
+   top: -8px;
+ }
 
-.room-details {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  align-items: center;
-}
-
-#status-occupied,
-#status-available {
-  display: flex;
-  padding: 5px 10px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 10px;
-}
-
-#status-occupied {
-  border-radius: 50px;
-  background: #F00;
-  color: #fff;
-  font-size: 12px;
-  font-weight: 600;
-  line-height: 16px;
-  letter-spacing: 1.25px;
-}
-
-#show-details {
-  color: #2565DC;
-}
+ .menu__btn>span::after {
+   content: '';
+   top: 8px;
+ }
 
 
-#status-available {
-  border-radius: 50px;
-  background: #12D68F;
-  color: #000;
-  font-size: 12px;
-  font-weight: 600;
-  line-height: 16px;
-  letter-spacing: 1.25px;
-} */
+ .menu__box {
+   display: block;
+   position: fixed;
+   top: 0;
+   left: -100%;
+   width: 300px;
+   height: 100%;
+   margin: 0;
+   padding: 80px 0;
+   list-style: none;
+   background-color: #fff;
+   box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+   transition-duration: .25s;
+ }
+
+ .menu__item {
+   display: block;
+   padding: 12px 24px;
+   color: #000;
+   font-size: 20px;
+   font-weight: 600;
+   text-decoration: none;
+   transition-duration: .25s;
+ }
+
+ .menu__item:hover {
+   background-color: #ADC6F3;
+   text-decoration: none;
+ }
+
+ #selected_menu_item {
+   color: #2565DC;
+ }
+
+ .select_floor select {
+   padding: 8px;
+   border: 0px solid transparent;
+   border-radius: 4px;
+   background-color: transparent;
+   font-weight: 800;
+   font-size: 16px;
+ }
+
+ .select_floor option {
+   font-weight: 800;
+   font-size: 16px;
+ }
+
+ .grid-container {
+   display: grid;
+   grid-template-columns: repeat(5, 1fr);
+   grid-gap: 30px;
+   margin-top: 30px;
+ }
+
+ .room-item {
+   display: inline-flex;
+   padding: 20px 30px 30px 30px;
+   flex-direction: column;
+   align-items: flex-start;
+   gap: 25px;
+ }
+
+ .room-item {
+   border-radius: 15px;
+   background: #FFF;
+   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
+ }
+
+ .room-details {
+   display: flex;
+   width: 100%;
+   justify-content: space-between;
+   align-items: center;
+ }
+
+ .occupiedStatus,
+ .avaliableStatus {
+   display: flex;
+   padding: 5px 10px;
+   flex-direction: column;
+   align-items: flex-start;
+   gap: 10px;
+ }
+
+ .occupiedStatus {
+   border-radius: 50px;
+   background: #F00;
+   color: #fff;
+   font-size: 12px;
+   font-weight: 600;
+   line-height: 16px;
+   letter-spacing: 1.25px;
+ }
+
+ .showDetails {
+   color: #2565DC;
+ }
+
+
+ .avaliableStatus {
+   border-radius: 50px;
+   background: #12D68F;
+   color: #000;
+   font-size: 12px;
+   font-weight: 600;
+   line-height: 16px;
+   letter-spacing: 1.25px;
+ } */
