--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,6 @@
 .Container {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 30px;
     justify-content: center;
     align-items: center;
@@ -20,24 +20,6 @@
     border-radius: 15px;
     background: #FFF;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
-}
-
-@media (max-width: 768px) {
-    .Container {
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 10px;
-    }
-
-    .roomItem {
-        display: inline-flex;
-        padding: 20px 30px 30px 30px;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 25px;
-        border-radius: 15px;
-        box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.25);
-        box-shadow: none;
-    }
 }
 
 .nameRoom {
@@ -83,4 +65,80 @@
     font-weight: 600;
     line-height: 16px;
     letter-spacing: 1.25px;
+}
+
+.Header {
+    display: flex;
+    flex-direction: column;
+    margin-inline: 50px;
+}
+
+.Logo {
+    display: flex;
+    align-self: center;
+}
+.selectFloor {
+    display: flex;
+    align-self: flex-start;
+}
+
+.selectFloor select {
+    padding-inline: 8px;
+    border: 0px solid transparent;
+    border-radius: 4px;
+    background-color: transparent;
+    font-weight: 800;
+    font-size: 25px;
+}
+
+.selectFloor option {
+    font-weight: 800;
+    font-size: 16px;
+}
+
+@media (max-width: 768px) {
+    .Container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 10px;
+    }
+
+    .roomItem {
+        display: inline-flex;
+        padding: 20px 30px 30px 30px;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        border-radius: 15px;
+        box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.25);
+        box-shadow: none;
+        margin: 10px;
+    }
+
+    .showDetails {
+        display: none;
+    }
+
+    .Logo {
+        display: none;
+    }
+
+    .Header {
+        display: flex;
+        flex-direction: column;
+        margin-inline: 0px;
+    }
+
+    .selectFloor {
+        display: flex;
+        align-self: flex-end;
+        border-radius: 6px;
+    }
+
+    .selectFloor select {
+        padding: 0;
+        margin: 0;
+        color: #2565DC;
+        font-size: x-large;
+        font-weight: 800;
+    }
 }
