--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,3 +3,18 @@
    background-color: #f2f2f2;
    padding: 0px 20px 20px 20px;
  }
+
+ /* Estilo para ocultar as bolinhas */
+ input[type="radio"] {
+   appearance: none;
+   -webkit-appearance: none;
+   -moz-appearance: none;
+ }
+
+ /* Estilo para preencher o texto quando o botão estiver selecionado */
+ input[type="radio"]:checked+span {
+   color: #fff;
+   background-color: #2565DC;
+   border-radius: 50px;
+   padding: 5px 10px;
+ }
