--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -142,6 +142,21 @@
     cursor: pointer;
 }
 
+.modalContent {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    outline: none;
+    width: 400px;
+    max-width: 100%;
+    margin: 0 auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
 @media (max-width: 768px) {
     .Container {
         grid-template-columns: repeat(2, 1fr);
